--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>star-wars-intro</title>
-    <link rel="stylesheet" href="/path/to/starwarsintro.css">
+    <link rel="stylesheet" href="starwarsintro.css">
     <link rel="stylesheet" href="styles.scss">
 <style>
 
@@ -235,7 +235,7 @@ body, html{
             </h2>
             <div class="personal-data">
             <h5>
-                <a href="https://mail.google.com/mail/u/0/#inbox">ozcanberkatakan@gmail.com</a> <br/> 
+                <a href="https://www.linkedin.com/in/ozcanberkatakan/">linkedin.com/in/ozcanberkatakan</a> <br/> 
                 <p> Cracow Poland  &nbsp; +48 534 186 290 | +90 507 409 04 49</p>
             </h5> 
             </div>
