--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>star-wars-intro</title>
+    <title>Özcan Berk Atakan - TheLightbringer Resume</title>
     <link rel="stylesheet" href="starwarsintro.css">
     <link rel="stylesheet" href="styles.scss">
 <style>
