--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
       color: #EBD71C;
 
     }
+
+
+img {
+  width: 100%;
+  height: 100%;
+}
+
+    
   
 
 </style>
@@ -46,7 +54,7 @@
         <!-- Logo Image or Text goes in here -->
         <h2 class="main-logo">
           <img src="./asset/image/IMG_3499.JPEG">
-        </h2>
+        </h2> 
       
         <!-- All Scrolling Content Goes in here -->
         <div class="main-content">
